--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
-rvm:
-  - 1.9.2
-  - 1.9.3
-  - ruby-head
-matrix:
-  allow_failures:
-    - rvm: 1.9.2
-    - rvm: ruby-head
 script: 'bundle exec thor ci'
+language: ruby
+rvm:
+  - 1.9.3
+  - 2.0.0
+  - jruby-19mode
