--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-script: 'bundle exec thor ci'
 language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
   - jruby-19mode
+env:
+  - TEST_SUITE=unit CI=true
+  - TEST_SUITE=acceptance CI=true
+script: 'bundle exec thor specc:$TEST_SUITE'
